crates/plotnik-lib/tests/04-emit/linking/anonymous_token_inadmissible_in_parent.txt
Q = (array "+")
------------------ DIAGNOSTICS -------------------
error: the grammar builds no `array` with these children
 --> query.ptk:1:6
  |
1 | Q = (array "+")
  |      ^^^^^
  |
help: `array` allows children `expression` or `spread_element`
help: each child is admissible here on its own — it is their combination or order the grammar never produces
